Code/Network Policies/15/Namespace.yaml
# kubectl create ns staging

apiVersion: v1
kind: Namespace
metadata:
  name: admin
  labels:
    role: admin
